# flexible-inference-bench

./: .gitignore  LICENSE  README.md  args.json  pyproject.toml  requirements-dev.txt
.github/workflows/: lint.yml  run-tests.yml
data_postprocessors/: itl.py  performance.py  ttft.py
engine/: distributions.py
examples/: benchmark-serverless.json  benchmark-serverless.sh  cserve_args.json  sharegpt_latency.json  summary_throughput.json  trt_llm_args.json  vllm_args.json
modular_inference_benchmark/engine/: backend_functions.py  client.py  data.py  distributions.py  main.py
modular_inference_benchmark/utils/: baichuan.py  utils.py
scripts/lint/: format.sh  lint.sh  mypy.ini  mypy.sh  pylintrc
scripts/unit_test/: test.sh
src/flexible_inference_benchmark/: __main__.py  main.py
src/flexible_inference_benchmark/data_postprocessors/: itl.py  performance.py  ttft.py
src/flexible_inference_benchmark/engine/: backend_functions.py  client.py  data.py  distributions.py  workloads.py
src/flexible_inference_benchmark/utils/: image_preprocesing.py  telemetry.py  tokenizer.py  utils.py
src/modular_inference_benchmark/: __main__.py  main.py
src/modular_inference_benchmark/engine/: backend_functions.py  client.py  data.py  distributions.py
src/modular_inference_benchmark/utils/: utils.py
tests/: conftest.py  sharegpt_data.py  test_backend.py  test_data.py  test_distributions.py  utils.py
tests/data/: complex_schema.json  sample_response_schema.json  sharegpt_sample_test_data.json  simple_schema.json
