[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flexible-inference-benchmark"
version = "0.0.1"
description = "Flexible Inference Benchmark"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "tqdm",
    "transformers",
    "sentencepiece",
    "aiohttp"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
inference-benchmark = "flexible_inference_benchmark.main:main"
